# leadership-coach

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
app/: chat.py  main.py
static/: app.js  style.css
templates/: index.html
tests/: test_api.py
